fix max cpu and mem type

--- a/modules/kubernetes_cluster/aws_eks/0.3/facets.yaml
+++ b/modules/kubernetes_cluster/aws_eks/0.3/facets.yaml
@@ -158,21 +158,23 @@ spec:
               description: Enable dedicated managed node pool.
               default: false
             max_cpu:
-              type: number
+              type: string
               title: Maximum CPU
               description: Maximum total CPU cores for this node pool.
-              default: 1000
-              x-ui-error-message: Maximum CPU must be between 1 and 1000
+              default: "1000"
+              pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+              x-ui-error-message: Maximum CPU must be a valid Kubernetes resource quantity (e.g., 1000, 1000m, 1k)
               x-ui-visible-if:
                 field: spec.node_pools.dedicated.enabled
                 values:
                 - true
             max_memory:
-              type: number
+              type: string
               title: Maximum Memory
               description: Maximum total memory for this node pool.
-              default: 1000
-              x-ui-error-message: Maximum memory must be between 1 and 1000
+              default: 1000Gi
+              pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+              x-ui-error-message: Maximum memory must be a valid Kubernetes resource quantity (e.g., 1000Gi, 1Ti, 1000000Mi)
               x-ui-visible-if:
                 field: spec.node_pools.dedicated.enabled
                 values:
@@ -190,10 +192,12 @@ spec:
             instance_family:
               type: string
               title: Instance Family (Category)
-              description: Comma-separated EC2 instance families/categories (e.g., c,m,r,g)
+              description: Comma-separated EC2 instance families/categories (e.g.,
+                c,m,r,g)
               default: c
               pattern: ^[a-z][0-9]*[a-z]*(,[a-z][0-9]*[a-z]*)*$
-              x-ui-error-message: Instance families must be comma-separated valid EC2 families (e.g., c,m,r,g)
+              x-ui-error-message: Instance families must be comma-separated valid
+                EC2 families (e.g., c,m,r,g)
               x-ui-visible-if:
                 field: spec.node_pools.dedicated.use_instance_family
                 values:
@@ -201,10 +205,12 @@ spec:
             instance_types:
               type: string
               title: Instance Types
-              description: Comma-separated EC2 instance types for the worker nodes (e.g., t3.medium,t3.large)
+              description: Comma-separated EC2 instance types for the worker nodes
+                (e.g., t3.medium,t3.large)
               default: t3.medium
               pattern: ^[a-z][0-9]+[a-z]*\.(nano|micro|small|medium|large|xlarge|[0-9]+xlarge)(,[a-z][0-9]+[a-z]*\.(nano|micro|small|medium|large|xlarge|[0-9]+xlarge))*$
-              x-ui-error-message: Instance types must be comma-separated valid EC2 instance types (e.g., t3.medium,t3.large)
+              x-ui-error-message: Instance types must be comma-separated valid EC2
+                instance types (e.g., t3.medium,t3.large)
               x-ui-visible-if:
                 field: spec.node_pools.dedicated.use_instance_family
                 values:
@@ -215,7 +221,8 @@ spec:
               description: Comma-separated capacity types (e.g., spot,on-demand)
               default: spot
               pattern: ^(on-demand|spot)(,(on-demand|spot))*$
-              x-ui-error-message: Capacity types must be comma-separated values from on-demand,spot
+              x-ui-error-message: Capacity types must be comma-separated values from
+                on-demand,spot
               x-ui-visible-if:
                 field: spec.node_pools.dedicated.enabled
                 values:
@@ -237,21 +244,23 @@ spec:
               description: Enable default managed node pool.
               default: true
             max_cpu:
-              type: number
+              type: string
               title: Maximum CPU
               description: Maximum total CPU cores for this node pool.
-              default: 1000
-              x-ui-error-message: Maximum CPU must be between 1 and 1000
+              default: "1000"
+              pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+              x-ui-error-message: Maximum CPU must be a valid Kubernetes resource quantity (e.g., 1000, 1000m, 1k)
               x-ui-visible-if:
                 field: spec.node_pools.default.enabled
                 values:
                 - true
             max_memory:
-              type: number
+              type: string
               title: Maximum Memory
               description: Maximum total memory for this node pool.
-              default: 1000
-              x-ui-error-message: Maximum memory must be between 1 and 1000
+              default: 1000Gi
+              pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+              x-ui-error-message: Maximum memory must be a valid Kubernetes resource quantity (e.g., 1000Gi, 1Ti, 1000000Mi)
               x-ui-visible-if:
                 field: spec.node_pools.default.enabled
                 values:
@@ -269,10 +278,12 @@ spec:
             instance_family:
               type: string
               title: Instance Family (Category)
-              description: Comma-separated EC2 instance families/categories (e.g., c,m,r,g)
+              description: Comma-separated EC2 instance families/categories (e.g.,
+                c,m,r,g)
               default: c
               pattern: ^[a-z][0-9]*[a-z]*(,[a-z][0-9]*[a-z]*)*$
-              x-ui-error-message: Instance families must be comma-separated valid EC2 families (e.g., c,m,r,g)
+              x-ui-error-message: Instance families must be comma-separated valid
+                EC2 families (e.g., c,m,r,g)
               x-ui-visible-if:
                 field: spec.node_pools.default.use_instance_family
                 values:
@@ -280,10 +291,12 @@ spec:
             instance_types:
               type: string
               title: Instance Types
-              description: Comma-separated EC2 instance types for the worker nodes (e.g., t3.medium,t3.large)
+              description: Comma-separated EC2 instance types for the worker nodes
+                (e.g., t3.medium,t3.large)
               default: t3.medium
               pattern: ^[a-z][0-9]+[a-z]*\.(nano|micro|small|medium|large|xlarge|[0-9]+xlarge)(,[a-z][0-9]+[a-z]*\.(nano|micro|small|medium|large|xlarge|[0-9]+xlarge))*$
-              x-ui-error-message: Instance types must be comma-separated valid EC2 instance types (e.g., t3.medium,t3.large)
+              x-ui-error-message: Instance types must be comma-separated valid EC2
+                instance types (e.g., t3.medium,t3.large)
               x-ui-visible-if:
                 field: spec.node_pools.default.use_instance_family
                 values:
@@ -294,7 +307,8 @@ spec:
               description: Comma-separated capacity types (e.g., spot,on-demand)
               default: spot
               pattern: ^(on-demand|spot)(,(on-demand|spot))*$
-              x-ui-error-message: Capacity types must be comma-separated values from on-demand,spot
+              x-ui-error-message: Capacity types must be comma-separated values from
+                on-demand,spot
               x-ui-visible-if:
                 field: spec.node_pools.default.enabled
                 values:
@@ -386,15 +400,15 @@ sample:
     node_pools:
       dedicated:
         enabled: false
-        max_cpu: 1000
-        max_memory: 1000
+        max_cpu: "1000"
+        max_memory: 1000Gi
         use_instance_family: false
         instance_types: t3.medium,t3.large
         capacity_types: spot
       default:
         enabled: false
-        max_cpu: 1000
-        max_memory: 1000
+        max_cpu: "1000"
+        max_memory: 1000Gi
         use_instance_family: false
         instance_types: t3.medium,t3.large
         capacity_types: spot
