--- a/modules/kubernetes_node_pool/aws_karpenter/0.1/facets.yaml
+++ b/modules/kubernetes_node_pool/aws_karpenter/0.1/facets.yaml
@@ -46,7 +46,8 @@ spec:
           description: Comma-separated EC2 instance families/categories (e.g., c,m,r,g)
           default: c
           pattern: ^[a-z][0-9]*[a-z]*(,[a-z][0-9]*[a-z]*)*$
-          x-ui-error-message: Instance families must be comma-separated valid EC2 families (e.g., c,m,r,g)
+          x-ui-error-message: Instance families must be comma-separated valid EC2
+            families (e.g., c,m,r,g)
           x-ui-visible-if:
             field: spec.instance_requirements.use_instance_family
             values:
@@ -57,7 +58,8 @@ spec:
           description: Comma-separated EC2 instance types (e.g., m6i.large,c5.xlarge)
           default: m6i.large
           pattern: ^[a-z][0-9]+[a-z]*\.(nano|micro|small|medium|large|xlarge|[0-9]+xlarge)(,[a-z][0-9]+[a-z]*\.(nano|micro|small|medium|large|xlarge|[0-9]+xlarge))*$
-          x-ui-error-message: Instance types must be comma-separated valid EC2 instance types (e.g., m6i.large,c5.xlarge)
+          x-ui-error-message: Instance types must be comma-separated valid EC2 instance
+            types (e.g., m6i.large,c5.xlarge)
           x-ui-visible-if:
             field: spec.instance_requirements.use_instance_family
             values:
@@ -109,16 +111,15 @@ spec:
           title: Maximum CPU
           description: Maximum total CPU cores for this node pool.
           default: '1000'
-          pattern: ^[1-9][0-9]*$
-          x-ui-error-message: Maximum CPU must be a positive integer
+          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+          x-ui-error-message: Maximum CPU must be a valid Kubernetes resource quantity (e.g., 1000, 1000m, 1k)
         max_memory:
           type: string
           title: Maximum Memory
           description: Maximum total memory for this node pool (e.g., 1000Gi).
           default: 1000Gi
-          pattern: ^[1-9][0-9]*(Gi|Mi|Ti)$
-          x-ui-error-message: Maximum memory must be a positive number followed by
-            Gi, Mi, or Ti (e.g., 1000Gi)
+          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+          x-ui-error-message: Maximum memory must be a valid Kubernetes resource quantity (e.g., 1000Gi, 1Ti, 1000000Mi)
         consolidation_policy:
           type: string
           title: Cost Optimization
@@ -304,9 +305,6 @@ sample:
     instance_requirements:
       use_instance_family: false
       instance_types: m6i.large,m6i.xlarge
-      # Alternative: use instance families instead
-      # use_instance_family: true
-      # instance_family: c,m,r
       cpu_range: 4,8,16
       architectures: amd64,arm64
       capacity_types: spot,on-demand
