adde missing cloud in mongodb atlas

--- a/modules/mongo/atlas/0.1/facets.yaml
+++ b/modules/mongo/atlas/0.1/facets.yaml
@@ -3,7 +3,10 @@ flavor: atlas
 version: '0.1'
 description: Adds mongo - atlas flavor
 clouds:
+- aws
+- gcp
 - azure
+- kubernetes
 inputs:
   atlas_account:
     type: '@outputs/atlas_account'
