[SYNC] Develop to Master (#419)
* if price is 0, exclude from dataset (#174)

* if price is 0, exclude from dataset

* removed .DS_Store

* added generated files

* removed incorrect files (#176)

* Revert "[S73] Feature: Per-Instance Artifactories Module (#210)" (#214)

This reverts commit a6777ed38ae92ffe1e98c09a6f097410634c104d.

* if price is 0, exclude from dataset (#174)

* if price is 0, exclude from dataset

* removed .DS_Store

* added generated files

* removed incorrect files (#176)

* [S73] Feature: Per-Instance Artifactories Module (#210)

* Added artifactories facets modules

* added schema

* updated spec

* changed type to string

* updated to null

* introduced indentation

* updated spec

* updated spec to have include_all false as default

* updated type from bool to boolean

* Revert "[S73] Feature: Per-Instance Artifactories Module (#210)" (#214)

This reverts commit a6777ed38ae92ffe1e98c09a6f097410634c104d.

* [S73] Feature: Per-Instance Artifactories Module (#215)

* Added artifactories facets modules

* added schema

* updated spec

* changed type to string

* updated to null

* introduced indentation

* updated spec

* updated spec to have include_all false as default

* updated type from bool to boolean

* added intent level output

* Artifactories Terraform Module (#228)

* added artifactories module

* updates to vault module

* removed facets yaml outputs

* added gitignore files

* Cleaned up ignored files

* Cleaned up ignored files

* Cleaned up ignored files

* added artifactories module

* updated to vault facets.yaml

* terraform fmt

* deleted zip_modules.py

* updated module source

* updated to work with github app

(cherry picked from commit 122c9dc28b355bfe612e98f026decf2195beb507)

* Innersourcing workflows (#230)

* added zip modules py

* updated the print statement

* modified the print message in zip_modules.py

* Implement concurrent zipping and uploading to S3 in zip_modules.py

* Update publish workflow to run 

--- a/modules/google_cloud_storage/default/0.2/facets.yaml
+++ b/modules/google_cloud_storage/default/0.2/facets.yaml
@@ -3,6 +3,9 @@ flavor: default
 version: '0.2'
 clouds:
 - gcp
+outputs:
+  default:
+    type: '@outputs/google_cloud_storage'
 description: Creates and manages a Google Cloud Storage bucket with configurable options.
 spec:
   title: Google Cloud Storage Bucket
@@ -143,22 +146,22 @@ spec:
   - uniform_bucket_level_access
 inputs:
   cloud_account:
-    type: '@output/cloud_account'
+    type: '@outputs/cloud_account'
     providers:
     - google
 outputs:
   default:
-    type: '@output/google_cloud_storage_bucket'
+    type: '@outputs/google_cloud_storage_bucket'
   attributes.read_only_role:
-    type: '@output/gcp_iam_role_name'
+    type: '@outputs/gcp_iam_role_name'
     title: Read-Only IAM Role
     description: The predefined IAM role for read-only access to the bucket
   attributes.read_write_role:
-    type: '@output/gcp_iam_role_name'
+    type: '@outputs/gcp_iam_role_name'
     title: Read-Write IAM Role
     description: The predefined IAM role for read-write access to the bucket
   attributes.bucket_iam_condition_expression:
-    type: '@output/gcp_iam_condition_expression'
+    type: '@outputs/gcp_iam_condition_expression'
     title: Bucket IAM Condition Expression
     description: An IAM condition expression using startsWith to match this specific
       bucket
