--- a/modules/alert_group/default/0.1/facets.yaml
+++ b/modules/alert_group/default/0.1/facets.yaml
@@ -4,7 +4,11 @@ version: '0.1'
 description: Creates Prometheus alert rules for monitoring and alerting with comprehensive
   validation and enhanced UI features
 clouds:
-- kubernetes
+ - aws
+  - gcp
+  - azure
+  - kubernetes
+
 spec:
   type: object
   properties:
